fixed layout bug

--- a/scss/flights/launches.module.scss
+++ b/scss/flights/launches.module.scss
@@ -19,10 +19,6 @@
     color: rgb(242, 243, 249);
     font-size: 1.8rem;
   }
-  .dropdown {
-    display: block;
-    width: 800px;
-  }
 
   .astroDiv {
     width: 100%;
